Add average of stats
Signed-off-by: lyzev <lyzev.info@gmail.com>

--- a/common/src/main/resources/assets/horsestatsmod/lang/de.de.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/de.de.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "Leben",
   "horsestatsmod.jump_height": "Sprungkraft",
   "horsestatsmod.speed": "Geschwindigkeit",
+  "horsestatsmod.average": "Durchschnitt",
   "horsestatsmod.slots": "Slots",
   "horsestatsmod.blocks": "Blöcke",
   "horsestatsmod.meters_per_seconds": "m/s",
