--- a/common/src/main/resources/assets/horsestatsmod/lang/en_us.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "Health",
   "horsestatsmod.jump_height": "Jump",
   "horsestatsmod.speed": "Speed",
+  "horsestatsmod.average": "Average",
   "horsestatsmod.slots": "Slots",
   "horsestatsmod.blocks": "Blocks",
   "horsestatsmod.meters_per_seconds": "m/s",
