--- a/common/src/main/resources/assets/horsestatsmod/lang/fr_fr.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/fr_fr.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "Vie",
   "horsestatsmod.jump_height": "Saut",
   "horsestatsmod.speed": "Vitesse",
+  "horsestatsmod.average": "Moyenne",
   "horsestatsmod.slots": "Emplacements",
   "horsestatsmod.blocks": "Blocs",
   "horsestatsmod.meters_per_seconds": "m/s",
