--- a/common/src/main/resources/assets/horsestatsmod/lang/ja_jp.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/ja_jp.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "体力",
   "horsestatsmod.jump_height": "ジャンプ力",
   "horsestatsmod.speed": "速度",
+  "horsestatsmod.average": "平均",
   "horsestatsmod.slots": "スロット",
   "horsestatsmod.blocks": "ブロック",
   "horsestatsmod.meters_per_seconds": "m/s",
