--- a/common/src/main/resources/assets/horsestatsmod/lang/ko_kr.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/ko_kr.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "생명력",
   "horsestatsmod.jump_height": "점프",
   "horsestatsmod.speed": "속도",
+  "horsestatsmod.average": "평균",
   "horsestatsmod.slots": "슬롯",
   "horsestatsmod.blocks": "블록",
   "horsestatsmod.meters_per_seconds": "m/s",
