--- a/common/src/main/resources/assets/horsestatsmod/lang/pl_pl.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/pl_pl.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "Zdrowie",
   "horsestatsmod.jump_height": "Skok",
   "horsestatsmod.speed": "Szybkość",
+  "horsestatsmod.average": "Średnia",
   "horsestatsmod.slots": "Sloty",
   "horsestatsmod.blocks": "bloki",
   "horsestatsmod.meters_per_seconds": "m/s",
