--- a/common/src/main/resources/assets/horsestatsmod/lang/ru_ru.json
+++ b/common/src/main/resources/assets/horsestatsmod/lang/ru_ru.json
@@ -3,6 +3,7 @@
   "horsestatsmod.health": "Здоровье",
   "horsestatsmod.jump_height": "Прыжок",
   "horsestatsmod.speed": "Скорость",
+  "horsestatsmod.average": "Среднее",
   "horsestatsmod.slots": "Слоты",
   "horsestatsmod.blocks": "Блоки",
   "horsestatsmod.meters_per_seconds": "м/с",
